--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,14 @@ android {
         release {
             buildConfigField "String", "TWITTER_USER_API_KEY", TWITTER_USER_API_KEY
             buildConfigField "String", "TWITTER_USER_API_SECRET", TWITTER_USER_API_SECRET
+            buildConfigField "Boolean", "IS_DEBUGGING", "false" //BuildConfig.DEBUG was buggy, so...
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
             buildConfigField "String", "TWITTER_USER_API_KEY", TWITTER_USER_API_KEY
             buildConfigField "String", "TWITTER_USER_API_SECRET", TWITTER_USER_API_SECRET
+            buildConfigField "Boolean", "IS_DEBUGGING", "true"
         }
     }
 
@@ -52,8 +54,10 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.j256.ormlite:ormlite-android:4.48'
+
+    //Analysis Tools
+    debugCompile 'com.facebook.stetho:stetho:1.1.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 
     //SAMPLE PURPOSE
     compile 'com.github.bumptech.glide:glide:3.6.1'
